Fix styling on mobile including line height and event show info and top search bar

--- a/frontend/src/components/EventPages/eventform.css
+++ b/frontend/src/components/EventPages/eventform.css
@@ -130,7 +130,6 @@
 .event-show-right {
     width: 25vw;
     box-sizing: content-box;
-    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items:center;
@@ -150,6 +149,7 @@
     flex-direction: row;
     align-items:baseline;
     margin-right: 20px;
+    line-height: 1.25rem;
 }
 
 .event-icons {
@@ -237,7 +237,9 @@ hr {
     .event-show-right {
         flex-direction: column-reverse;
         width: 100%;
+        padding: 0px;
         box-sizing: border-box;
+        margin-left: -10px;
     }
     
 }
