--- a/frontend/src/components/NavMenu/navmenu.css
+++ b/frontend/src/components/NavMenu/navmenu.css
@@ -49,7 +49,7 @@
 .mini-search {
     display: none;
     cursor: pointer;
-    font-size: 24px;
+    font-size: 32px;
 }
 
 .mobilized {
@@ -85,11 +85,23 @@
 @media screen and (max-width: 770px) {
     .mini-search {
         display: inline;
+        margin-bottom: -8px;
+        
     }
 
-    .left-menu > *, .right-menu > * {
+    .left-menu > * {
         margin-left: 5px;
     }
+    .right-menu > * {
+        margin-left: 5px;
+    }
+    .logo {
+        margin-left: -5px;
+    } 
+
+    .logos {
+        height: 20pt;
+      }
 
 }
 
