--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,6 +22,7 @@ body {
     font-family: Graphik Regular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica,Arial,sans-serif;
     height: 100%;
     position: relative;
+    line-height: 1.25rem;
 }
 html {
     height: 100%;
